<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background_light">

    <!-- Encabezado -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:background="@color/blue_primary">

        <TextView
            android:id="@+id/tvCartTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cart_title"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvCartTotal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cart_total"
            android:textColor="@color/blue_light"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="6dp" />

    </LinearLayout>

    <!-- Lista del carrito -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerCart"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="20dp"
        android:clipToPadding="false" />

    <!-- Botón comprar -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnBuy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/buy"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        android:backgroundTint="@color/deep_orange_primary"
        app:cornerRadius="14dp" />

</LinearLayout>
